--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,12 @@
+:root {
+    --primary-text-color: #757575;
+    --title-text-color: #212121;
+    --accent-color: #2196F3;
+}
+
 body {
     background-color: #FFFFFF;
-    color:#757575;
+    color: var(--primary-text-color);
 }
 .list {
     list-style: none;
@@ -13,6 +19,9 @@ body {
 .site-nav .link:hover,
 .site-nav .link:focus{
     color:#2196F3;
+}
+.site-nav .link.current {
+    color: #2196F3;
 }
 /* Contacts */
 .contact-site{
