--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 body {
     background-color: #FFFFFF;
     color: var(--primary-text-color);
+    font-family: Roboto, sans-serif;
 }
 .list {
     list-style: none;
