--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@ body {
 
 .site-nav .link {
     color:#212121;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 
 }
 .site-nav .link:hover,
