--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,7 @@ letter-spacing: 0.02em;
 .hero-title {
     background-color: #2F303A;
     color:#FFFFFF;
-    
-    font-weight: 900;
+     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     text-align: center;
@@ -61,9 +60,10 @@ letter-spacing: 0.02em;
     line-height: 1.8;
 }
 /* Section */
-.section-title {
+.section-title.title {
     color:#212121;
 }
+
 /* Button */
 button {
     font-family: inherit;
