--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,15 @@
     letter-spacing: 0.03em;
     text-decoration: none;
 }
+.footerlogo-link {
+    color: #FFFFFF;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    text-decoration: none;
+}
 .logo-accent{
     color: #2196F3;
 }
